--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
+
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -20,6 +21,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Página não encontrada</strong></p>
+  <p>Pode ser que o evento ou clube que procura ainda não foi cadastrado.</p>
 </div>
